# Nexus

./: .gitignore  ARCHITECTURE.md  CMAKE_BUILD.md  CMakeLists.txt  DESIGN.md  DYNAMIC_QUEUE_ALLOCATION.md  DYNAMIC_SHM_DESIGN.md  FULL_DUPLEX_ISSUES.md  Makefile  QNX_COMPATIBILITY.md  README.md  SHARED_MEMORY_DESIGN.md  SHM_CLEANUP_SOLUTION.md  V3_ARCHITECTURE_LIMITS.md  V3_IMPLEMENTATION_SUMMARY.md  V3_IMPROVEMENTS.md  V3_REGISTRY_CLEANUP_FIX.md  build.sh  coverage.info  coverage_filtered.info  demo_integration.sh  run_coverage.sh  run_duplex_test.sh  run_large_data_test.sh  run_quick_random_test.sh  run_random_exit_test.sh  run_tests.sh  run_unit_tests.sh  test_abnormal_exit.cpp  test_cleanup.cpp  test_cross_process_discovery.cpp  test_cross_process_node_events.cpp  test_duplex_v2.cpp  test_heartbeat_timeout.cpp  test_inprocess.cpp  test_interprocess_receiver.cpp  test_interprocess_sender.cpp  test_large_receiver.cpp  test_large_sender.cpp  test_service_discovery.cpp
build_test/: Makefile  test_long_term_stability  test_polling_overhead  test_service_cleanup  unit_tests
build_test/Testing/Temporary/: CTestCostData.txt
build_test/scripts/: coverage_report.py
cmake/: qnx.cmake
coverage_report/: index-sort-f.html  index-sort-l.html  index.html
coverage_report/Nexus/: index-sort-f.html  index-sort-l.html  index.html  test_service_cleanup.cpp.func-sort-c.html  test_service_cleanup.cpp.func.html  test_service_cleanup.cpp.gcov.html
coverage_report/Nexus/include/nexus/core/: Message.h.func-sort-c.html  Message.h.func.html  Message.h.gcov.html  Node.h.func-sort-c.html  Node.h.func.html  Node.h.gcov.html  NodeImpl.h.func-sort-c.html  NodeImpl.h.func.html  NodeImpl.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/Nexus/include/nexus/registry/: GlobalRegistry.h.func-sort-c.html  GlobalRegistry.h.func.html  GlobalRegistry.h.gcov.html  SharedMemoryRegistry.h.func-sort-c.html  SharedMemoryRegistry.h.func.html  SharedMemoryRegistry.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/Nexus/include/nexus/transport/: LargeDataChannel.h.func-sort-c.html  LargeDataChannel.h.func.html  LargeDataChannel.h.gcov.html  LockFreeQueue.h.func-sort-c.html  LockFreeQueue.h.func.html  LockFreeQueue.h.gcov.html  SharedMemoryTransportV3.h.func-sort-c.html  SharedMemoryTransportV3.h.func.html  SharedMemoryTransportV3.h.gcov.html  UdpTransport.h.func-sort-c.html  UdpTransport.h.func.html  UdpTransport.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/Nexus/include/nexus/utils/: Logger.h.func-sort-c.html  Logger.h.func.html  Logger.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/Nexus/src/core/: Config.cpp.func-sort-c.html  Config.cpp.func.html  Config.cpp.gcov.html  NodeImpl.cpp.func-sort-c.html  NodeImpl.cpp.func.html  NodeImpl.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/Nexus/src/registry/: GlobalRegistry.cpp.func-sort-c.html  GlobalRegistry.cpp.func.html  GlobalRegistry.cpp.gcov.html  SharedMemoryRegistry.cpp.func-sort-c.html  SharedMemoryRegistry.cpp.func.html  SharedMemoryRegistry.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/Nexus/src/transport/: LargeDataChannel.cpp.func-sort-c.html  LargeDataChannel.cpp.func.html  LargeDataChannel.cpp.gcov.html  SharedMemoryTransportV3.cpp.func-sort-c.html  SharedMemoryTransportV3.cpp.func.html  SharedMemoryTransportV3.cpp.gcov.html  UdpTransport.cpp.func-sort-c.html  UdpTransport.cpp.func.html  UdpTransport.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_report/Nexus/src/utils/: Logger.cpp.func-sort-c.html  Logger.cpp.func.html  Logger.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
document/: ARCHITECTURE.md  CMAKE_BUILD.md  DESIGN_DOC.md  QNX_COMPATIBILITY.md
include/: LargeDataChannel.h  LockFreeQueue.h  Message.h  Node.h  NodeImpl.h  SharedMemoryRegistry.h  SharedMemoryTransportV2.h  SharedMemoryTransportV3.h  UdpTransport.h  qnx_compat.h
include/nexus/core/: Config.h  Message.h  Node.h  NodeImpl.h
include/nexus/platform/: qnx_compat.h
include/nexus/registry/: SharedMemoryRegistry.h
include/nexus/transport/: LargeDataChannel.h  SharedMemoryTransportV3.h
scripts/: coverage_report.py  run_coverage_tests.sh
src/: LargeDataChannel.cpp  NodeImpl.cpp  SharedMemoryRegistry.cpp  SharedMemoryTransportV2.cpp  SharedMemoryTransportV3.cpp  UdpTransport.cpp
src/core/: Config.cpp  NodeImpl.cpp
src/registry/: SharedMemoryRegistry.cpp
src/transport/: LargeDataChannel.cpp  SharedMemoryTransportV3.cpp  UdpTransport.cpp
tests/integration/: test_duplex_v2.cpp  test_heartbeat_timeout.cpp  test_inprocess.cpp  test_large_receiver.cpp  test_large_sender.cpp  test_service_discovery.cpp
tests/stability/logs/: summary_report.txt
tests/unit/: main.cpp  simple_test.h  test_config.cpp  test_coverage_gap.cpp  test_large_data_advanced.cpp  test_large_data_channel.cpp  test_large_data_cleanup.cpp  test_large_data_extra_coverage.cpp  test_large_data_policies.cpp  test_large_data_zero_copy.cpp  test_lock_free_queue.cpp  test_node.cpp  test_node_coverage.cpp  test_node_edge_cases.cpp  test_node_extended.cpp  test_node_impl_coverage.cpp  test_node_impl_coverage_final.cpp  test_node_impl_coverage_gap.cpp  test_node_impl_service_discovery.cpp  test_node_self_message.cpp  test_node_udp.cpp  test_node_udp_coverage.cpp  test_node_udp_extended.cpp  test_registry.cpp  test_registry_advanced_coverage.cpp  test_registry_coverage.cpp  test_registry_coverage_extra.cpp  test_transport.cpp  test_transport_coverage.cpp  test_transport_errors.cpp  test_transport_extended.cpp  test_transport_stress.cpp  test_transport_v3_advanced.cpp  test_transport_v3_coverage.cpp  test_transport_v3_coverage_final.cpp  test_transport_v3_modes.cpp  test_utils.cpp
